# crossfit-judge

./: .gitignore  LICENSE  README.md  pyproject.toml
squat/application/: counterfactual.py  density.py  extract_features.py  rep_features.py  rich_features.py
squat/domain/: features.py  features_2d.py  hjc.py  ports.py  pose.py  sequence.py  validation.py
squat/infrastructure/counter/: signal_counter.py
squat/infrastructure/datasets/: exercise_recognition.py  fitness_aqa.py  repcount.py
squat/infrastructure/model/: dataset.py  tcn.py
squat/infrastructure/pose/: mediapipe_estimator.py
squat/infrastructure/video/: opencv_reader.py
squat/scripts/: ablation_hjc.py  ablation_hjc_recordings.py  analyze_recording.py  baseline_count.py  build_validation_dataset.py  cache_features.py  cache_fitness_aqa.py  cache_recordings.py  cache_recordings_2d.py  cache_recordings_v2.py  eval_recordings.py  evaluate_judge.py  inspect_dataset.py  ml_vs_rule_2d.py  probe_frontal_2d.py  recordings_v2.example.json  sync_views.py  test_pose.py  train.py  train_ml_validator.py  train_single_validator.py  train_single_validator_2d.py  train_validator.py  validate_depth.py  validate_lockout_view.py  validate_shallow_counterfactual.py
